# rust-graphql-wasm-auth-barebones

./: .env.example  .gitignore  Cargo.toml  README.md  configuration.toml
client/: Cargo.toml  cfg.toml  index.html  trunk.toml
client/assets/css/: style.sass  style.scss
client/graphql/: all_controllers.graphql  all_users.graphql  controller.graphql  controllers_by_creator.graphql  mutations.graphql  queries.graphql  schema.graphql
client/src/: app.rs  error.rs  lib.rs
client/src/components/: logout.rs  mod.rs  msg_ctx.rs  nav.rs  pagination.rs  progress_delay.rs
client/src/hooks/: lazy_function.rs  mod.rs  use_query.rs  use_user_context.rs
client/src/models/: mod.rs
client/src/pages/: author_list.rs  controller.rs  controllers.rs  home.rs  login.rs  mod.rs  page_not_found.rs  post_list.rs  users.rs
client/src/types/: mod.rs
client/src/util/: common.rs  console_log.rs  constant.rs  mod.rs
configuration/: base.example.yaml
migrations/: 20220822012904_user.down.sql  20220822012904_user.up.sql
server/configuration/: base.example.yaml
server/src/: configuration.rs  lib.rs  routes.rs  startup.rs  telemetry.rs
server/src/authentication/: cookie.rs  manager.rs  passwords.rs
server/src/graphql/: context.rs  mutation_root.rs  post.rs  query_root.rs  user.rs
server/src/graphql/dataloaders/: loader_registry.rs  mod.rs  post_loader.rs  user_loader.rs
server/src/graphql/sql/: user.rs
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
src/authentication/: cookie.rs  manager.rs  mod.rs  password.rs  password2.rs  passwords.rs  session.rs
src/gql/: context.rs  mod.rs  mutation_root.rs  post.rs  query_root.rs  session.rs  user.rs
src/gql/dataloaders/: loader_registry.rs  mod.rs  post_loader.rs  user_loader.rs
src/gql/sql/: user.rs  user_posts.sql
src/graphql/: mod.rs  mutation_root.rs  post.rs  query_root.rs  user.rs
src/graphql/sql/: user.rs  user_posts.sql
src/session/: cookie.rs  manager.rs  mod.rs
