[package]
edition = "2021"
name = "emissionsapp"
version = "1.0.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "emissionsapp"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-web = "4"
actix-web-lab = "0.17"

async-graphql = {version = "4", features = ["default", "dataloader", "time", "tracing", "uuid"]}
async-graphql-actix-web = "4"

env_logger = "0.9"
log = "0.4"

actix-session = {version = "0.7", features = ["redis-rs-tls-session"]}
actix-web-flash-messages = {version = "0.4", features = ["cookies"]}
anyhow = "1"
config = "0.13"
itertools = "0.10.3"
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "4"
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"]}
tokio = "1.21.0"
tracing = "0.1"
uuid = {version = "1.1", features = ["serde", "v4"]}
